# clam

./: .gitignore  Cargo.toml  README.md  clam.vim  grammar.txt  sample.cl  sample.cm  semantics.txt  test.cm
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: ast.rs  ast_visitor.rs  lib.rs  tokens.rs  util.rs
interpreter/: Cargo.toml
interpreter/src/: data.rs  lib.rs  type_checker.rs
parser/: Cargo.toml
parser/benches/: lexer_bench.rs
parser/src/: lexer.rs  lexer_tests.rs  lib.rs  parser.lalrpop  parser.rs  parser_tests.rs  tokens.rs
src/: ast.rs  lexer.rs  lexer_tests.rs  main.rs  test.rs
test_data/: fib.input.cm  fib.output.txt  struct.input.cm  while_loop.input.cm
vim/: clam.vim
