[package]
name = "clam-lang"
version = "0.1.0"

[dependencies]
clam_parser = { path = "parser" }
clam_common = { path = "common" }
clam_interpreter = { path = "interpreter" }
im-rc = "15.1.0"
pretty_assertions = "1.4.0"

[dev-dependencies]
datatest = "0.8.0"

[workspace]
members = [
    "parser",
    "common",
    "interpreter"
]

[profile.release]
lto = true
