[package]
name = "clam_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = "0.20.0"
maplit = "1.0.2"
ordered-float = "3.7.0"
logos = "0.12.0"
clam_common  = { path = "../common" }

[build-dependencies]
lalrpop = "0.20.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer_bench"
harness = false
